infra/k8s/manifests/server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oae-server
  namespace: oae
spec:
  selector:
    app: oae-server
  ports:
    - port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
